<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Pizza">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Space
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/firstItemPizza"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/title_dark"
            android:clickable="true"

            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/napoletana"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/secondItemPizza"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/title_dark"
            android:backgroundTintMode="screen"
            android:clickable="true"

            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/alla_pala"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/fourthItemPizza"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/title_dark"
            android:clickable="true"

            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text= "@string/taglio"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/thirdItemPizza"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/title_dark"
            android:clickable="true"

            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/tonda"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/fifthItemPizza"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/title_dark"
            android:clickable="true"

            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text= "@string/fritta"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/sixthItemPizza"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/title_dark"
            android:clickable="true"

            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text= "@string/padellino"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/seventhItemPizza"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/title_dark"
            android:clickable="true"

            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text= "@string/siciliana"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>
    <RelativeLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="bottom|end"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/secondaryDarkColor"
            android:contentDescription="@string/action_settings"
            app:backgroundTint="@color/trans"
            app:srcCompat="@drawable/ic_cart"
            tools:layout_editor_absoluteX="339dp"
            tools:layout_editor_absoluteY="659dp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>