<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    android:label="@string/first_fragment_label"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">
    <fragment
        android:id="@+id/cartView"
        android:name="com.example.myrestaurant.CartView"
        android:label="Cart"
        tools:layout="@layout/cart_view">
        <action
            android:id="@+id/action_cartView_to_nav_graph"
            app:popUpTo="@id/FirstFragment" />
        <action
            android:id="@+id/action_cartView_to_itemView"
            app:destination="@id/itemView" />
    </fragment>
    <fragment
        android:id="@+id/itemView"
        android:name="com.example.myrestaurant.ItemView"
        android:label="Items"
        tools:layout="@layout/list_view">
        <action
            android:id="@+id/action_itemView_to_nav_graph"
            app:popUpTo="@id/FirstFragment" />
        <action
            android:id="@+id/action_itemView_to_cartView"
            app:destination="@id/cartView" />
    </fragment>
    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.myrestaurant.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">
        <action
            android:id="@+id/action_FirstFragment_to_AntiPasto"
            app:destination="@id/AntiPasto" />
        <action
            android:id="@+id/action_FirstFragment_to_steak"
            app:destination="@id/steak" />
        <action
            android:id="@+id/action_FirstFragment_to_freshPasta"
            app:destination="@id/freshPasta" />
        <action
            android:id="@+id/action_FirstFragment_to_tiramisu"
            app:destination="@id/tiramisu" />
        <action
            android:id="@+id/action_FirstFragment_to_pizza"
            app:destination="@id/pizza" />
        <action
            android:id="@+id/action_FirstFragment_to_CartView"
            app:destination="@id/cartView" />
        <action
            android:id="@+id/action_FirstFragment_to_itemView"
            app:destination="@id/itemView" />
    </fragment>
    <fragment
        android:id="@+id/AntiPasto"
        android:name="com.example.myrestaurant.AntiPasto"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/anti_pasto">

        <action
            android:id="@+id/action_SecondFragment_to_itemDescription"
            app:destination="@id/itemDescription" />
        <action
            android:id="@+id/action_AntiPasto_pop"
            app:destination="@id/FirstFragment"
            app:popUpTo="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/steak"
        android:name="com.example.myrestaurant.Steak"
        android:label="@string/steak_menu"
        tools:layout="@layout/steak">
        <action
            android:id="@+id/action_steak_to_itemDescription"
            app:destination="@id/itemDescription" />
        <action
            android:id="@+id/action_steak_pop"
            app:destination="@id/FirstFragment"
            app:popUpTo="@id/FirstFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/freshPasta"
        android:name="com.example.myrestaurant.FreshPastaFrag"
        android:label="@string/frestpasta"
        tools:layout="@layout/fresh_pasta">
        <action
            android:id="@+id/action_freshPasta_to_itemDescription"
            app:destination="@id/itemDescription" />
        <action
            android:id="@+id/action_freshPasta_pop"
            app:popUpTo="@id/freshPasta"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/tiramisu"
        android:name="com.example.myrestaurant.Tiramisu"
        android:label="@string/tiramenu"
        tools:layout="@layout/tiramisu">
        <action
            android:id="@+id/action_tiramisu_to_itemDescription"
            app:destination="@id/itemDescription" />
        <action
            android:id="@+id/action_tiramisu_pop2"
            app:destination="@id/FirstFragment"
            app:popUpTo="@id/FirstFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/pizza"
        android:name="com.example.myrestaurant.Pizza"
        android:label="@string/pizza_menu"
        tools:layout="@layout/pizza">
        <action
            android:id="@+id/action_pizza_to_itemDescription"
            app:destination="@id/itemDescription" />
        <action
            android:id="@+id/action_pizza_pop"
            app:popUpTo="@id/FirstFragment"
            />
    </fragment>
    <dialog
        android:id="@+id/itemDescription"
        android:name="com.example.myrestaurant.ItemDescription"
        android:label="ItemDescription"
        tools:layout="@layout/item_description">
        <action
            android:id="@+id/action_itemDescription_pop"
            app:popUpTo="@id/itemDescription"
            app:popUpToInclusive="true" />
    </dialog>
</navigation>