<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cartScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@color/background_trans"
    tools:context=".CartView">

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="490dp"
        android:background="@color/material_dynamic_secondary90"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabMenu"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:backgroundTint="@color/material_on_primary_disabled"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabIndicatorAnimationDuration="@integer/material_motion_duration_short_1"
            app:tabRippleColor="@color/secondaryDarkColor"
            app:tabSelectedTextColor="@color/black"
            app:tabTextColor="@color/secondaryColor">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/toItemList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/cart_activity" >
            </com.google.android.material.tabs.TabItem>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/toCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/cart" />

        </com.google.android.material.tabs.TabLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|bottom"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/rel">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/exit_button"
            app:srcCompat="@drawable/ic_close2"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>