<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/material_dynamic_secondary90"
    android:orientation="vertical"
    tools:context=".ItemDescription">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/itemDesc_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            android:paddingStart="15dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif-light"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:elegantTextHeight="true"
            android:textSize="22sp"
            android:textStyle="bold"
            android:background="@color/secondaryDarkColor"/>

        <TextView
            android:id="@+id/itemDesc"
            android:elegantTextHeight="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:justificationMode="inter_word"
            android:padding="4dp"
            android:paddingStart="5dp"
            android:paddingEnd="4dp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/itemCost"
            android:elegantTextHeight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="sans-serif"
            android:justificationMode="inter_word"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="22sp" />
        <ImageView
            android:id="@+id/itemImg"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/trans"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/quantity_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemDesc_l"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:elegantTextHeight="true"
            android:paddingEnd="5dp"
            android:text="@string/quantity"
            android:textColor="@color/primaryDarkColor"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:autofillHints="Quantity"
            android:hint="@string/how_many"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingStart="45dp"
            android:paddingEnd="40dp"
            android:shadowColor="@color/white"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/primaryDarkColor"
            android:textColorHint="@color/hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantity_l"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp">
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Space
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <Button
            android:id="@+id/addToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_shop_add_small"
            android:drawableTint="@color/white"
            android:text="@string/add" />

    </LinearLayout>

</RelativeLayout>
</ScrollView>
