<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cartScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@color/black"
    tools:context=".ItemView">

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="540dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scrollable"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </RelativeLayout>

    <Button
        android:id="@+id/cart_view_list"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/secondaryDarkColor"
        android:drawableLeft="@drawable/ic_list"
        android:drawableTint="@color/white"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:text="@string/list"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />

    <Button
        android:id="@+id/cart_view_clear"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/secondaryDarkColor"
        android:contentDescription="@string/clear_cart"
        android:drawableLeft="@drawable/ic_remove_cart_large"
        android:drawableTint="@color/white"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:text="@string/clear_cart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />

    <Button
        android:id="@+id/btn_return"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/secondaryDarkColor"
        android:drawableLeft="@drawable/ic_back_arrow"
        android:drawableTint="@color/white"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:text="@string/back"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>